--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -18,15 +22,10 @@ body {
   }
 }
 
-a {
-  color: #2563eb;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
 }
 
-h1 {
-  font-weight: 800;
+a {
+  @apply text-blue-500 hover:text-blue-600;
 }
